# Elephant_robocon2023

./: README.md
can_odometry/: package.xml  setup.cfg  setup.py
can_odometry/can_odometry/: odometry.py
elephant_can/: package.xml  setup.py
elephant_can/elephant_can/: can_node.py  can_teleop.py  position_saver.py
elephant_can/kinematic_model/: kinematic.py
elephant_control/: package.xml  setup.cfg  setup.py
elephant_control/elephant_control/: controller.py  mpc_node.py  mpc_pos_pub.py  mpc_pos_pub_back.py
elephant_imu/: name  package.xml  setup.cfg  setup.py
elephant_imu/elephant_imu/: imu.py  imu_calibration.py
elephant_imu/launch/: imu.launch.py
elephant_launch/: package.xml  setup.cfg  setup.py
elephant_launch/config/: ekf.yaml
elephant_launch/launch/: ekf.launch.py  elephant.launch.py  elephant_back_up.launch.py  elephant_testing.launch.py  position_saver.launch.py
elephant_localization/: package.xml  setup.cfg  setup.py
elephant_localization/elephant_localization/: mhe_pubsub.py
elephant_localization/model/: elephant_model.py  mhe.py
elephant_odom/: package.xml  setup.cfg  setup.py
elephant_odom/elephant_odom/: internal_odom.py  odom.py  odom_wheel.py
elephant_pid/: package.xml  setup.cfg  setup.py
elephant_pid/elephant_pid/: Yaw_PID.py
elephant_ps3_controller/: package.xml  setup.cfg  setup.py
elephant_ps3_controller/elephant_ps3_controller/: ps3_serial.py  tcp_serial.py
elephant_publish_pos/: package.xml  setup.cfg  setup.py
elephant_shooter/: package.xml  setup.cfg  setup.py
elephant_shooter/config/: param.yaml  shooter.yaml
elephant_shooter_v2/: package.xml  setup.cfg  setup.py
imu_n100/: CMakeLists.txt  package.xml  wheeltec_udev.sh
imu_n100/include/imu_n100/: data_struct.h  imu_driver.h
imu_n100/launch/: imu.launch.py
imu_n100/msg/: Imu_raw_data.msg
imu_n100/src/: crc_table.cpp  imu_driver.cpp  imu_pub.cpp
py_srvcli/: package.xml  setup.py
shooter_interfaces/: CMakeLists.txt  package.xml
shooter_service/: package.xml  setup.cfg  setup.py
(+27 files in other folders)
